[gd_scene load_steps=3 format=3 uid="uid://cko2lhqdu4n44"]

[ext_resource type="Script" path="res://scripts/components/hitbox_component.gd" id="1_4x2gt"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hdxcr"]
radius = 0.3
height = 1.8

[node name="HitboxComponent" type="Area3D"]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_4x2gt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_hdxcr")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
